--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +47,7 @@
     "@babel/core": "^7.25.2",
     "@babel/eslint-parser": "^7.25.1",
     "@babel/preset-react": "^7.24.7",
+    "@reduxjs/rtk-codemods": "^0.1.2",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -57,7 +59,8 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2"
   },
   "lint-staged": {
     "*.js": [
